# convolution

./: .gitignore  CMakeLists.txt  README.md
src/: CSVWriter.cpp  CSVWriter.h  Document.cpp  Document.h  main.cpp
